# HW27_essential

./: HW28.postman_collection.json  HW29.postman_collection.json  README.md  db.sqlite3  pyproject.toml
advertisement/: admin.py  ads.csv  models.py  new_ads.csv  new_location.csv  read_data.py  serializers.py  urls.py  views.py
advertisement/migrations/: 0001_initial.py  0002_alter_advertisement_description_and_more.py  0003_alter_advertisement_options_alter_category_options.py  0004_advertisement_image.py  0005_advertisement_category_alter_advertisement_author.py  0006_alter_advertisement_category.py  0007_alter_advertisement_author.py  0008_alter_advertisement_author.py  0009_alter_advertisement_author.py  0010_rename_author_advertisement_author_id.py  0011_rename_author_id_advertisement_author.py  0012_remove_advertisement_address.py
djangoProject/: settings.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_last_name.py  0003_alter_user_age_alter_user_locations.py  0004_remove_user_locations_user_locations.py
