[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["solos-pro <sergey-solonichenko@rambler.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.9.3"
Pillow = "^9.2.0"
Django = "^4.0.6"
pandas = "^1.4.3"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
